5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1602_1014.log
== TEST (2019-03-27 18:17:06) 
-- CODE:
lucro = int(input("quanto de lucro"))
vendas = int(input("quanto vendeu"))
print (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lucro = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:17:20) 
-- CODE:
lucro = int(input("quanto de lucro"))
vendas = int(input("quanto vendeu"))
print (round(x, 2))
-- EXECUTION TIME:
0.226946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    lucro = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:18:06) 
-- CODE:
lucro = int(input("quanto de lucro"))
vendas = int(input("quanto vendeu"))
lucro total = 30%
print (round (x, 2))
-- ERROR:
File "XXXX", line 3
    lucro total = 30%
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:18:14) 
-- CODE:
lucro = int(input("quanto de lucro"))
vendas = int(input("quanto vendeu"))
print (round (x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lucro = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:18:30) 
-- CODE:
lucro = int(input("lucro"))
vendas = int(input("vendeu"))
print (round (x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lucro = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:18:37) 
-- CODE:
lucro = float(input("lucro"))
vendas = int(input("vendeu"))
print (round (x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:32:31) 
-- CODE:
vencas=float(input("valor total das vendas"))
lucro= vendas*(30/100)
print= round(x, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lucro= vendas*(30/100)
NameError: name 'vendas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:32:36) 
-- CODE:
vencas=float(input("valor total das vendas"))
lucro= vendas*(30/100)
print= round(x, 2)

-- EXECUTION TIME:
0.206514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 2, in <module>
    lucro= vendas*(30/100)
NameError: name 'vendas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:32:45) 
-- CODE:
vencas= float(input("valor total das vendas"))
lucro= vendas*(30/100)
print= round(x, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lucro= vendas*(30/100)
NameError: name 'vendas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:32:46) 
-- CODE:
vencas= float(input("valor total das vendas"))
lucro= vendas*(30/100)
print= round(x, 2)

-- EXECUTION TIME:
0.126239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 2, in <module>
    lucro= vendas*(30/100)
NameError: name 'vendas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:32:55) 
-- CODE:
vendas= float(input("valor total das vendas"))
lucro= vendas*(30/100)
print= round(x, 2)

-- EXECUTION TIME:
0.177644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 3, in <module>
    print= round(x, 2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:33:16) 
-- CODE:
vendas= float(input("valor total das vendas:"))
lucro= vendas*(30/100)
print= round(x, 2)

-- EXECUTION TIME:
0.128606
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 3, in <module>
    print= round(x, 2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:33:42) 
-- CODE:
vendas=float(input("valor total das vendas:"))
lucro= vendas*(30/100)
print= round(x, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print= round(x, 2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:33:48) 
-- CODE:
vendas=float(input("valor total das vendas:"))
lucro= vendas*(30/100)
print= round(x, 2)
-- EXECUTION TIME:
0.192039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 3, in <module>
    print= round(x, 2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:34:09) 
-- CODE:
vendas=float(input("valor total das vendas:"))
lucro= vendas*(30/100)
print= round(lucro, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print= round(x, 2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:34:10) 
-- CODE:
vendas=float(input("valor total das vendas:"))
lucro= vendas*(30/100)
print= round(lucro, 2)
-- EXECUTION TIME:
0.130955
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:35:05) 
-- CODE:
vendas=float(input("valor total das vendas:"))
lucro= vendas*(30/100)
print(round(lucro, 2))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:35:07) 
-- CODE:
vendas=float(input("valor total das vendas:"))
lucro= vendas*(30/100)
print(round(lucro, 2))
-- EXECUTION TIME:
0.183843
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
